added files for issue tracker

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,14 @@
-<head>
+<!-- <head>
   <style>
     .card {
       background-color: lightblue;
     }
   </style>
-</head>
+</head> -->
+<link rel="stylesheet" href="/css/home.css" />
 
-<body>
+
+<!-- <body> -->
   <!-- Your HTML code here -->
   <div class="mb-5 p-5">
     <% for( let project of projects ) { %>
@@ -32,4 +34,4 @@
       </div>
       <% } %>
   </div>
-</body>
+<!-- </body> -->
