--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,11 +1,10 @@
-<div
-  class="card w-100 mt-5"
-  style="position: fixed; left: 0; bottom: 0; width: 100%"
->
-  <!-- <div class="card-header">
+<link rel="stylesheet" href="/css/footer.css" />
+
+<div class="card w-100 mt-5" id="footer" >
+  <div class="card-header">
     <p>&#169; All Rights Reserved</p>
     <footer class="blockquote-footer">
-      <cite title="Source Title">Rahul Varshney</cite>
-    </footer> -->
+      <cite title="Source Title">Muhammad Zain Rafiq</cite>
+    </footer>
   </div>
 </div>
