--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/footer.css" />
 
-<div class="card w-100 mt-5" id="footer" >
+<!-- <div class="card w-100 mt-5" id="footer" >
   <div class="card-header">
     <p>&#169; All Rights Reserved</p>
     <footer class="blockquote-footer">
       <cite title="Source Title">Muhammad Zain Rafiq</cite>
     </footer>
   </div>
-</div>
+</div> -->
